twolebot-main/twolebot-main/tests/ui/private_live_board.stderr
error[E0603]: module `live_board` is private
 --> tests/ui/private_live_board.rs:1:21
  |
1 | use twolebot::work::live_board;
  |                     ^^^^^^^^^^ private module
  |
note: the module `live_board` is defined here
 --> src/work/mod.rs
  |
  | mod live_board;
  | ^^^^^^^^^^^^^^
