twolebot-main/twolebot-main/tests/ui/private_live_board.rs
use twolebot::work::live_board;

fn main() {}
